<?xml version="1.0"?>
<package format="2">
  <name>tracing_test</name>
  <version>0.0.0</version>
  <description>The tracing_test package</description>

  <maintainer email="ZHEN001@e.ntu.edu.sg">Lei Zhen(Ray)</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
